--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postcss": "^8.3.9",
     "postcss-custom-media": "^8.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^6.2.0",
     "prettier": "^2.4.1",
     "style-loader": "^3.3.0",
     "stylelint": "^13.13.1",
