added network service

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@dr.pogodin/babel-plugin-react-css-modules": "^6.4.0",
+    "@types/qs": "^6.9.7",
     "@types/react-css-modules": "^4.6.4",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
@@ -84,6 +85,7 @@
   },
   "dependencies": {
     "@types/react": "^17.0.29",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
