--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/react": "^17.0.29",
     "qs": "^6.10.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "socket.io-client": "^4.3.0"
   }
 }
