--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^7.0.1",
     "socket.io-client": "^4.3.0"
   }
 }
